--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">RAECO2</string>
+    <string name="app_name">RAECO</string>
+    <string name="resizable">Ajustar Animal</string>
+    <string name="scene_viewer_settings">Configurar: </string>
+    <string name="duck">Duck</string>
+    <string name="robot">Robot (animated)</string>
+    <string name="choose_3d_model">3D model:</string>
+    <string name="choose_mode">Mode:</string>
+    <string name="show_with_scene_viewer">Aplicar</string>
+    <string name="display_title">Desplegar Nombre</string>
+    <string name="display_link">Desplegar Link</string>
+    <string name="Sound">Activar Sonido</string>
+    <string name="none">none</string>
+    <string name="ar_only">ar_only</string>
+    <string name="ar_preferred">ar_preferred</string>
 </resources>
